// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiStat is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiStat euiStat--leftAligned testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1bexacr-euiTitle-l"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props accent is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title euiStat__title--accent css-1bexacr-euiTitle-l"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props center is rendered 1`] = `
<div
  class="euiStat euiStat--centerAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1bexacr-euiTitle-l"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props danger is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title euiStat__title--danger css-1bexacr-euiTitle-l"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props default is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1bexacr-euiTitle-l"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props hexcode colors are rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1bexacr-euiTitle-l"
    style="color:#EB1919"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props l is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1bexacr-euiTitle-l"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props left is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1bexacr-euiTitle-l"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props loading is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiStat euiStat--leftAligned testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title euiStat__title-isLoading css-1bexacr-euiTitle-l"
  >
    --
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    Statistic is loading
  </p>
</div>
`;

exports[`EuiStat props m is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1w464ad-euiTitle-m"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props primary is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title euiStat__title--primary css-1bexacr-euiTitle-l"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props render with custom description element 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <div
      aria-hidden="true"
    >
      <div>
        description
      </div>
    </div>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1bexacr-euiTitle-l"
    style="color:#EB1919"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props render with custom title element 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <div
    aria-hidden="true"
    class="euiTitle euiStat__title css-1bexacr-euiTitle-l"
  >
    <div>
      title
    </div>
  </div>
</div>
`;

exports[`EuiStat props right is rendered 1`] = `
<div
  class="euiStat euiStat--rightAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1bexacr-euiTitle-l"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props s is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1mr6cet-euiTitle-s"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props subdued is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title euiStat__title--subdued css-1bexacr-euiTitle-l"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props success is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title euiStat__title--success css-1bexacr-euiTitle-l"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props title and description are reversed 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1bexacr-euiTitle-l"
  >
    title
  </p>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    class="euiScreenReaderOnly"
  >
    title description
  </p>
</div>
`;

exports[`EuiStat props xs is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1c9cwui-euiTitle-xs"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props xxs is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1po7voc-euiTitle-xxs"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props xxxs is rendered 1`] = `
<div
  class="euiStat euiStat--leftAligned"
>
  <div
    class="euiText euiText--small euiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-7xv8go-euiTitle-xxxs"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;
